fix range matching

--- a/app/views/profile_traits/tags/index.html.haml
+++ b/app/views/profile_traits/tags/index.html.haml
@@ -15,7 +15,7 @@
           %th
 
       %tbody
-        - @tags.each do |tag|
+        - @tags.order(:position).each do |tag|
           %tr
             %td= tag.name_with_position
             %td
