profile trait UX enhancements

--- a/app/assets/stylesheets/modules/admin/_icons.scss
+++ b/app/assets/stylesheets/modules/admin/_icons.scss
@@ -2,7 +2,7 @@ i.multiple_choice,
 i.multiple-choice {
   background-image: image-url('icons/multiple-choice.svg');
 }
-i.slider {
+i.range {
   background-image: image-url('icons/slider.svg');
   display: inline;
 }
