--- a/app/views/trait_training_set_questions/edit.haml
+++ b/app/views/trait_training_set_questions/edit.haml
@@ -1,6 +1,8 @@
 .row
   .col-sm-12
-    %h1 Edit Profile Trait Training Set Question
+    %h2.heading__has-icon
+      %i{class: @trait_training_set_question.question.system_type_label}
+      = @trait_training_set_question.question.prompt
 
 .row
   .col-sm-8
