--- a/app/views/trait_training_set_response_impacts/_multiple_choice_fields.haml
+++ b/app/views/trait_training_set_response_impacts/_multiple_choice_fields.haml
@@ -3,7 +3,7 @@
   %table.table
     %thead
       %tr
-        %th Question
+        %th Option
         %th Profile Trait Tag
     %tbody
       - @trait_training_set_question.question.options.each_with_index do |option, i|
