--- a/app/views/survey_response_trait_evaluations/index.haml
+++ b/app/views/survey_response_trait_evaluations/index.haml
@@ -1,15 +1,15 @@
 .row.admin__intro
   .col-sm-12
-    %h1 View Recommended Profile Traits for #{@trait_training_set.name}
+    %h1 Profile Trait Matches
+
+.row.admin__actions
+  .col-sm-12
+    = link_to 'Adjust Question Impacts', trait_training_set_questions_path(@trait_training_set), class: 'btn btn-primary'
+
 
 .row
   .col-sm-6
-    %table.table
-
-      %tbody
-        - @profile_sets.preload(:survey_responses).each do |profile_set|
-          %tr
-            %th= profile_set.name
-            - profile_set.survey_responses.each do |survey_response|
-              %tr
-                %td= link_to survey_response.name, trait_training_set_evaluation_path(@trait_training_set, survey_response)
+    %p Please choose a survey response from the list to the right.
+  .col-sm-3.col-sm-offset-3
+    %h3 Responses
+    = render 'responses_list'
