top nav adjustments

--- a/app/assets/stylesheets/modules/admin/_navs.scss
+++ b/app/assets/stylesheets/modules/admin/_navs.scss
@@ -1,9 +1,20 @@
 .divider-vertical {
-  height: $navbar-height;
+  height: 60px;
   margin: 0;
   border-right: 1px solid $red-002;
   //border-left: 1px solid #f2f2f2;
 }
 .main .nav-tabs {
   margin-bottom: 18px;
+}
+.navbar-nav li {
+  max-width: 115px;
+  text-align: center;
+}
+.navbar-nav > li > a {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.navbar.navbar-static-top {
+  min-height: inherit;
 }
