--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -3,7 +3,7 @@
     .navbar-header
     .collapse.navbar-collapse
       %ul.nav.navbar-nav
-        %li{class: ("active" if active_top_nav_section == 'home_pages')}= link_to "Wrapt Admin Home", root_path
+        %li{class: ("active" if active_top_nav_section == 'home_pages')}= link_to "Wrapt Admin", root_path
         %li{class: ("active" if active_top_nav_section == 'gifts')}= link_to "Gifts", gifts_path
         %li{class: ("active" if active_top_nav_section == 'products')}= link_to "Products", products_path
         %li{class: ("active" if active_top_nav_section == 'vendors')}= link_to "Vendors", vendors_path
