choose question section [#130536693]

--- a/app/views/survey_questions/edit_multiple_choice.haml
+++ b/app/views/survey_questions/edit_multiple_choice.haml
@@ -8,9 +8,10 @@
       .form-inputs.pt4
         = form.input :prompt
         = form.input :code, hint: '(required for importing)'
+        = f.association :survey_section, as: :select, collection: @survey.sections, include_blank: false, label: 'Section'
 
       .form-actions.pb4
-        = form.submit '1. Save Prompt and Code', class: 'btn btn-primary'
+        = form.submit '1. Save Prompt, Code, and Section', class: 'btn btn-primary'
 
     %h3 Choices
     %ol.pl5.edit-question-list.question-list{data: {option_list: true, sortable_list: true, sortable_list_href: survey_question_option_ordering_path(@survey, @survey_question)}, class: option_list_classes}
