--- a/app/views/survey_questions/edit.haml
+++ b/app/views/survey_questions/edit.haml
@@ -10,6 +10,7 @@
       .form-inputs.mb4
         = form.input :prompt
         = form.input :code, hint: '(required for importing)'
+        = form.association :survey_section, as: :select, collection: @survey.sections, include_blank: false, label: 'Section'
         = render form_fields_partial(@survey_question), form: form
         = render 'conditional_display_fields', form: form
 
