--- a/app/assets/stylesheets/modules/admin/_lists_tables.scss
+++ b/app/assets/stylesheets/modules/admin/_lists_tables.scss
@@ -10,13 +10,6 @@
   list-style-type: none;
 }
 
-.question-list__item .glyphicon-move
- {
-  position: absolute;
-  left: -40px;
-  top: 2px;
-}
-
 .section-list {
   padding-left: 20px;
 }
@@ -32,8 +25,8 @@
   list-style: lower-alpha;
 }
 .edit-question-list__item.question-list__item .glyphicon-move {
-  left: -38px; // aiyee magic numbers
-  top: 3px;
+  // left: -38px; // aiyee magic numbers
+  // top: 3px;
 }
 .question-list__icon {
   background-position: left center;
@@ -52,6 +45,15 @@
 .ui-sortable-handle {
   cursor: pointer;
 }
+
+.question-list__section-header {
+  margin-left: -40px;
+}
+
+.table > tbody > tr.question-list__empty-section-drop-target td {
+  border-top: none;
+}
+
 .admin-index-table--image-cell {
   width: 120px;
   text-align: center;
