--- a/app/views/profile_set_survey_responses/_form.html.haml
+++ b/app/views/profile_set_survey_responses/_form.html.haml
@@ -4,9 +4,17 @@
   .form-inputs
     .admin-quiz-question.mb5
       = f.input :name, label: 'Name for this response'
-
+    
+    - section = nil
+    - section_was = nil
     = f.simple_fields_for :question_responses do |question_response_fields|
-      - question = question_response_fields.object.survey_question
+      :ruby
+        question = question_response_fields.object.survey_question
+        section = question.section_or_uncategorized
+      - if section != section_was
+        %h3= section.name
+      - section_was = section
+
       .admin-quiz-question.mb5{data: {behavior: 'survey_question', question_id: question.id, conditional_display: ('true' if question.conditional_display), conditional_question_id: question.conditional_question_id, conditional_question_option_ids: question.conditional_question_options.map(&:survey_question_option_id).to_json}}
         %h4.admin-quiz-question__label #{question_response_fields.index + 1}. #{question_response_fields.object.survey_question.prompt_with_name(@profile_set_survey_response)}
         = question_response_fields.input :survey_question_id, as: :hidden
