--- a/app/views/survey_questions/edit_multiple_choice.haml
+++ b/app/views/survey_questions/edit_multiple_choice.haml
@@ -8,7 +8,7 @@
       .form-inputs.pt4
         = form.input :prompt
         = form.input :code, hint: '(required for importing)'
-        = f.association :survey_section, as: :select, collection: @survey.sections, include_blank: false, label: 'Section'
+        = form.association :survey_section, as: :select, collection: @survey.sections, include_blank: false, label: 'Section'
 
       .form-actions.pb4
         = form.submit '1. Save Prompt, Code, and Section', class: 'btn btn-primary'
