--- a/app/views/layouts/pjax_modal_content.haml
+++ b/app/views/layouts/pjax_modal_content.haml
@@ -4,6 +4,7 @@
   %h4.modal-title(data-pjax-modal-title)
     = yield :modal_title
 .modal-body.clearfix
+  = render 'layouts/alerts'
   %div(data-pjax-modal-body)
     = yield
   %div(data-pjax-modal-loading style="display: none;")
