--- a/app/views/gifts/show.html.haml
+++ b/app/views/gifts/show.html.haml
@@ -3,6 +3,7 @@
     %h1
       = @gift.title
       = link_to 'Edit', edit_gift_path(@gift), class: 'btn btn-default btn-xs'
+      = link_to 'Delete', gift_path(@gift), :method => :delete, :data => { :confirm => 'Are you sure you want to delete this gift?' }, class: 'btn btn-danger btn-xs'
 
     %p
       %span.label.label-default= @gift.product_category&.name
