--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -3,8 +3,7 @@
     %h1
       = @product.title
       = link_to 'Edit', edit_product_path(@product), class: 'btn btn-default btn-xs'
-
-    %p= link_to "Create a Gift from this Product", product_single_product_gift_path(@product), class: 'btn btn-primary', data: {method: :post}
+      = link_to 'Delete', product_path(@product), :method => :delete, :data => { :confirm => 'Are you sure you want to delete this product?' }, class: 'btn btn-danger btn-xs'
 
     %p
       = @product.description
