--- a/app/views/single_product_gifts/new.haml
+++ b/app/views/single_product_gifts/new.haml
@@ -1,6 +1,6 @@
 %h2 Creating a Gift from #{@product.title}
 
-= simple_form_for @gift, url: product_single_product_gift_path(@product), html: {data: {submits_to_pjax_modal: true}} do |form|
+= simple_form_for @gift, url: product_single_product_gift_path(@product, context_params), html: {data: {submits_to_pjax_modal: true}} do |form|
 
   .form-inputs
     = form.association :product_category, disabled: true
