--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -3,6 +3,7 @@
   %head
     %title Wrapt
     = csrf_meta_tags
+    = action_cable_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     %link{href: '//fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:400,600|Raleway:400,600', rel: 'stylesheet', type: 'text/css'}
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
