refactoring to admin namespace

--- a/app/views/admin/products/_breadcrumbs.haml
+++ b/app/views/admin/products/_breadcrumbs.haml
@@ -1,4 +1,4 @@
 - unless params[:action] == 'index'
   .row.breadcrumbs
     .col-sm-12
-      = link_to "&laquo; Products".html_safe, products_path
+      = link_to "&laquo; Products".html_safe, admin_products_path
