--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@product, html: {data: {behavior: 'form-loads-subcategories'}}) do |f|
+= simple_form_for([:admin, @product], html: {data: {behavior: 'form-loads-subcategories'}}) do |f|
   = f.error_notification
 
   .form-inputs
