--- a/app/views/admin/products/index.html.haml
+++ b/app/views/admin/products/index.html.haml
@@ -4,11 +4,11 @@
 
 .row.admin__actions
   .col-sm-12
-    = link_to 'Add a Product', new_product_path, class: 'btn btn-primary'
+    = link_to 'Add a Product', new_admin_product_path, class: 'btn btn-primary'
 
 .row.admin__search
   .col-sm-12
-    = form_for @product_search, url: products_path, html: {method: 'GET', class: 'form-inline', data: {behavior: 'form-loads-subcategories'}} do |form|
+    = form_for @product_search, url: admin_products_path, html: {method: 'GET', class: 'form-inline', data: {behavior: 'form-loads-subcategories'}} do |form|
       .form-group
         = form.search_field :keyword, placeholder: 'Title or SKU', class: 'form-control', style: 'min-width: 300px;'
         = form.collection_select :product_category_id, ProductCategory.categories, :id, :name, {prompt: 'Category'}, class: 'form-control', data: {behavior: 'product-category-input'}
@@ -16,7 +16,7 @@
         %button.btn.btn-primary
           %i.glyphicon.glyphicon-search
           Search
-        = link_to 'Clear Search (Show All)', products_path, class: 'btn btn-default'
+        = link_to 'Clear Search (Show All)', admin_products_path, class: 'btn btn-default'
 
 .row
   .col-sm-12
@@ -48,16 +48,16 @@
             %td
               %ul(style="padding-left: 20px;")
                 - product.gifts.each_with_index do |gift, i|
-                  %li= link_to gift.title, gift
+                  %li= link_to gift.title, [:admin, gift]
             %td.text-right
               - if product.single_product_gift.present?
-                = link_to product.single_product_gift.title, product.single_product_gift
+                = link_to product.single_product_gift.title, [:admin, product.single_product_gift]
               - else
-                = link_to 'Create Single-Product Gift', new_product_single_product_gift_path(product, context_params), class: 'btn btn-default btn-xs', data: {loads_in_pjax_modal: true}
+                = link_to 'Create Single-Product Gift', new_admin_product_single_product_gift_path(product, context_params), class: 'btn btn-default btn-xs', data: {loads_in_pjax_modal: true}
             %td.admin-index-table--buttons-cell
-              = link_to 'View', product, class: 'btn btn-default btn-xs'
-              = link_to 'Edit', edit_product_path(product), class: 'btn btn-default btn-xs'
-              = link_to 'Delete', product_path(product, context_params), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
+              = link_to 'View', [:admin, product], class: 'btn btn-default btn-xs'
+              = link_to 'Edit', edit_admin_product_path(product), class: 'btn btn-default btn-xs'
+              = link_to 'Delete', admin_product_path(product, context_params), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
 
     %p=paginate @products
 
