--- a/app/views/admin/products/show.html.haml
+++ b/app/views/admin/products/show.html.haml
@@ -2,8 +2,8 @@
   .col-sm-12
     %h1
       = @product.title
-      = link_to 'Edit', edit_product_path(@product), class: 'btn btn-default btn-xs'
-      = link_to 'Delete', product_path(@product), :method => :delete, :data => { :confirm => 'Are you sure you want to delete this product?' }, class: 'btn btn-danger btn-xs'
+      = link_to 'Edit', edit_admin_product_path(@product), class: 'btn btn-default btn-xs'
+      = link_to 'Delete', admin_product_path(@product), :method => :delete, :data => { :confirm => 'Are you sure you want to delete this product?' }, class: 'btn btn-danger btn-xs'
 
     %p
       = @product.description
@@ -53,7 +53,7 @@
               %td
                 - if gift.primary_gift_image&.image?
                   = image_tag gift.primary_gift_image.image_url(:small)
-              %td= link_to gift.name, gift
+              %td= link_to gift.name, [:admin, gift]
               %td= gift.wrapt_sku
 
     %p
