--- a/app/views/training_set_evaluations/show.haml
+++ b/app/views/training_set_evaluations/show.haml
@@ -2,7 +2,7 @@
   .col-sm-12
     %h1= @training_set_evaluation.training_set.name
 
-    - if @training_set_evaluation.stale?
+    - if @training_set_evaluation.recommendations_in_progress?
       %p
         = image_tag 'ajax-loader.gif'
         We're still generating recommendations for this training set.  Please wait a moment.
@@ -10,7 +10,7 @@
         setTimeout(function() { window.location.reload() }, 5000)
 
     - elsif @recommendations_by_survey_response_id.empty?
-      %p Sorry, no recommendations were found for this training set.
+      %p Sorry, no recommendations were found for this training
 
     - else
       - @training_set_evaluation.profile_sets.preload(:survey_responses).each do |profile_set|
