inventory management working [#134517571]

--- a/app/views/admin/gift_products/index.haml
+++ b/app/views/admin/gift_products/index.haml
@@ -31,7 +31,7 @@
               %td.admin__gift-available-products
                 - if product.primary_product_image.present?
                   = image_tag product.primary_product_image.image_url(:small), class: 'admin-index-table--image'
-              %td= link_to product.title, product
+              %td= link_to product.title, admin_product_path(product)
               %td= product.wrapt_sku
               %td= number_with_delimiter product.units_available
               %td= link_to 'Remove', admin_gift_product_path(@gift, gift_product, context_params), method: 'delete', data: {confirm: 'Are you sure?'}, class: 'btn btn-xs btn-danger'
@@ -64,7 +64,7 @@
               %td.admin-index-table--image-cell
                 - if product.primary_product_image.present?
                   = image_tag product.primary_product_image.image_url(:small), class: 'admin-index-table--image'
-              %td= link_to product.title, product
+              %td= link_to product.title, admin_product_path(product)
               %td= product.wrapt_sku
               %td= number_with_delimiter product.units_available
               %td= link_to 'Add', admin_gift_products_path(@gift, context_params.merge(gift_product: {product_id: product.id})), method: 'post', class: 'btn btn-xs btn-primary'
