--- a/app/views/admin/profile_sets/_form.html.haml
+++ b/app/views/admin/profile_sets/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@profile_set) do |f|
+= simple_form_for( [:admin, @profile_set]) do |f|
   = f.error_notification
 
   .form-inputs
