--- a/app/views/admin/profile_traits/topics/_form.html.haml
+++ b/app/views/admin/profile_traits/topics/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@profile_traits_topic) do |f|
+= simple_form_for( [:admin, @profile_traits_topic]) do |f|
   = f.error_notification
 
   .form-inputs
