--- a/app/views/admin/surveys/_survey.html.haml
+++ b/app/views/admin/surveys/_survey.html.haml
@@ -3,4 +3,4 @@
     = survey.title
     = image_tag 'ajax-loader.gif'
 - else
-  = link_to survey.title, survey
+  = link_to survey.title, admin_survey_path(survey)
