--- a/app/views/admin/training_sets/_form.html.haml
+++ b/app/views/admin/training_sets/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@training_set) do |f|
+= simple_form_for( [:admin, @training_set]) do |f|
   = f.error_notification
 
   .form-inputs
