--- a/app/views/admin/gift_images/new.haml
+++ b/app/views/admin/gift_images/new.haml
@@ -1,7 +1,7 @@
 %p
   Redirecting...
 
-= form_for @gift_image, url: admin_gift_images_path(@gift), html: {data: {auto_submit_form: true}} do |form|
+= form_for  [:admin, @gift_image], url: admin_gift_images_path(@gift), html: {data: {auto_submit_form: true}} do |form|
   = form.hidden_field :key
 
 :javascript
