--- a/app/views/admin/gift_question_impacts/new.html.haml
+++ b/app/views/admin/gift_question_impacts/new.html.haml
@@ -3,7 +3,7 @@
     %h1 New Gift-Question
 .row
   .col-sm-6
-    = simple_form_for(@gift_question_impact, url: admin_training_set_gift_question_impacts_path(@training_set)) do |f|
+    = simple_form_for( [:admin, @gift_question_impact], url: admin_training_set_gift_question_impacts_path(@training_set)) do |f|
       = f.error_notification
 
       .form-inputs
