--- a/app/views/admin/profile_traits/facets/_form.html.haml
+++ b/app/views/admin/profile_traits/facets/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @profile_traits_facet, url: url do |f|
+= simple_form_for  [:admin, @profile_traits_facet], url: url do |f|
   = f.error_notification
 
   .form-inputs
