--- a/app/views/admin/survey_questions/edit_multiple_choice.haml
+++ b/app/views/admin/survey_questions/edit_multiple_choice.haml
@@ -3,7 +3,7 @@
     %h2.heading__has-icon
       %i.multiple-choice 
       Edit Multiple-Choice Question
-    = simple_form_for @survey_question, url: admin_survey_question_path(@survey, @survey_question) do |form|
+    = simple_form_for  [:admin, @survey_question], url: admin_survey_question_path(@survey, @survey_question) do |form|
 
       .form-inputs.pt4
         = form.input :prompt
@@ -18,13 +18,13 @@
       - @options.each do |option|
         = render 'option_row', option: option
 
-    = simple_form_for @survey_question_option, url: admin_survey_question_options_path(@survey, @survey_question), remote: true, html: {class: 'form form-inline', data: {new_option_form: true, type: 'html'}} do |option_form|
+    = simple_form_for  [:admin, @survey_question_option], url: admin_survey_question_options_path(@survey, @survey_question), remote: true, html: {class: 'form form-inline', data: {new_option_form: true, type: 'html'}} do |option_form|
       .mb5.pt3
         = option_form.input :text, label: false, as: :string, input_html: {data: {new_option_text: true}, class: 'min-width-03'}, placeholder: 'Choice text'
         = option_form.submit 'Add New Choice', class: 'btn btn-primary', data: {disable_with: 'Adding...'}
 
     
-    = simple_form_for @survey_question, url: admin_survey_question_path(@survey, @survey_question) do |form|
+    = simple_form_for  [:admin, @survey_question], url: admin_survey_question_path(@survey, @survey_question) do |form|
 
       %h3 Additional Options
       .form-inputs.mb4
