--- a/app/views/admin/survey_questions/ranges/_form.html.haml
+++ b/app/views/admin/survey_questions/ranges/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @survey_question, url: url do |f|
+= simple_form_for  [:admin, @survey_question], url: url do |f|
   = f.error_notification
 
   .form-inputs
