--- a/app/views/admin/survey_sections/_form.html.haml
+++ b/app/views/admin/survey_sections/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@survey_section, url: url) do |f|
+= simple_form_for( [:admin, @survey_section], url: url) do |f|
   = f.error_notification
 
   .form-inputs
