--- a/app/views/admin/surveys/show.html.haml
+++ b/app/views/admin/surveys/show.html.haml
@@ -8,7 +8,8 @@
   .col-sm-12
     = link_to "Add New Question", new_admin_survey_question_path(@survey), class: 'btn btn-primary'
     = link_to "Edit Sections", admin_survey_sections_path(@survey), class: 'btn btn-primary'
-    = link_to 'Create a Copy of this Survey', admin_survey_copying_path(@survey), class: 'btn btn-primary', data: {method: 'post'}
+    = link_to 'Create a Copy of this Quiz', admin_survey_copying_path(@survey), class: 'btn btn-primary', data: {method: 'post'}
+    = link_to 'Delete this Quiz', admin_survey_path(@survey), class: 'btn btn-danger', method: :delete,data: {confirm: 'Are you sure?'}
 
 .row
   .col-sm-12
