--- a/app/views/admin/trait_training_set_questions/edit.haml
+++ b/app/views/admin/trait_training_set_questions/edit.haml
@@ -6,7 +6,7 @@
 
 .row
   .col-sm-8
-    = simple_form_for @trait_training_set_question, url: admin_trait_training_set_question_path(@trait_training_set, @trait_training_set_question), html: {data: {behavior: 'loads-trait-response-impact-fields'}} do |form|
+    = simple_form_for  [:admin, @trait_training_set_question], url: admin_trait_training_set_question_path(@trait_training_set, @trait_training_set_question), html: {data: {behavior: 'loads-trait-response-impact-fields'}} do |form|
 
       .form-inputs
         = form.association :facet, input_html: {data: {behavior: 'facet-select'}}
