--- a/app/views/admin/survey_questions/_conditional_display_fields.haml
+++ b/app/views/admin/survey_questions/_conditional_display_fields.haml
@@ -1,5 +1,5 @@
 = form.input :conditional_display, as: :boolean, label: 'Display this question conditionally', input_html: {data: {behavior: 'toggle-conditional-question-fields'}}
 %div(data-behavior="conditional-question-fields" style="display: none;")
   = form.association :conditional_question, label: 'Show this question if the answer to:', prompt: 'Select question', collection: @survey.multiple_choice_questions.where.not(id: @survey_question.id), label_method: 'prompt', input_html: {data: {behavior: 'conditional-question-id-input'}}
-  %div{data: {behavior: "conditional-question-options-container", conditional_question_options_url_base: "/surveys/#{@survey.id}/questions/#{@survey_question.id}/conditional_question_options"}}
-    = render 'conditional_question_options/show', conditional_question: @survey_question.conditional_question
+  %div{data: {behavior: "conditional-question-options-container", conditional_question_options_url_base: "/admin/surveys/#{@survey.id}/questions/#{@survey_question.id}/conditional_question_options"}}
+    = render 'admin/conditional_question_options/show', conditional_question: @survey_question.conditional_question
