--- a/app/views/admin/survey_sections/index.html.haml
+++ b/app/views/admin/survey_sections/index.html.haml
@@ -8,15 +8,17 @@
 
 
 .row
-  .col-sm-12
-    %ul.section-list{data: {sortable_list: true, sortable_list_href: admin_survey_section_ordering_path(@survey)}}
-      - @survey_sections.each_with_index do |survey_section, i|
-        %li.mb4.section-list__item{data: {sortable_item: true, sortable_item_id: survey_section.id}}
-          %i.glyphicon.glyphicon-move
-          = survey_section.name
-          .section-list__edit-links
-            = link_to 'Edit', edit_admin_survey_section_path(@survey, survey_section), class: 'btn btn-default btn-xs'
-            = link_to 'Delete', admin_survey_section_path(@survey, survey_section), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
+  .col-sm-6
+    %table.table{data: {sortable_list: true, sortable_list_href: admin_survey_section_ordering_path(@survey)}}
+      %tbody
+        - @survey_sections.each_with_index do |survey_section, i|
+          %tr{data: {sortable_item: true, sortable_item_id: survey_section.id}}
+            %td
+              %i.glyphicon.glyphicon-move
+              = survey_section.name
+            %td
+              = link_to 'Edit', edit_admin_survey_section_path(@survey, survey_section), class: 'btn btn-default btn-xs'
+              = link_to 'Delete', admin_survey_section_path(@survey, survey_section), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
 
 
 - content_for :page_js do
