--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -3,18 +3,10 @@
     .navbar-header
     .collapse.navbar-collapse
       %ul.nav.navbar-nav
-        %li{class: ("active" if active_top_nav_section == 'home_pages')}= link_to "Wrapt Admin", root_path
-        %li{class: ("active" if active_top_nav_section == 'gifts')}= link_to "Gifts", admin_gifts_path
-        %li{class: ("active" if active_top_nav_section == 'products')}= link_to "Products", admin_products_path
-        %li{class: ("active" if active_top_nav_section == 'vendors')}= link_to "Vendors", admin_vendors_path
-        %li{class: ("active" if active_top_nav_section == 'product_categories')}= link_to "Product Categories", admin_product_categories_path
-        %li{class: ("active" if active_top_nav_section == 'surveys')}= link_to "Quizzes", admin_surveys_path
-        %li.divider-vertical
-        %li{class: ("active" if active_top_nav_section == 'profile_traits')}= link_to "Profile Traits", admin_profile_traits_topics_path
-        %li{class: ("active" if active_top_nav_section == 'profile_sets')}= link_to "Response Sets", admin_profile_sets_path
-        %li{class: ("active" if active_top_nav_section == 'training_sets')}= link_to "Gift Training Sets", admin_training_sets_path
-        %li{class: ("active" if active_top_nav_section == 'trait_training_sets')}= link_to "Profile Trait Training Sets", admin_trait_training_sets_path
-        %li.divider-vertical
-        %li= link_to "Log Out", private_access_session_path, method: :delete
+        %li{class: ("active" if active_top_nav_section == 'home_pages')}= link_to "Wrapt", root_path
+      %ul.nav.navbar-nav.pull-right
+        -# TODO only show link to admin if current user is one
+        %li= link_to "Admin", admin_root_path
+        %li= link_to "Log Out", '#', method: :delete
         
 
