remove private access code

--- a/app/views/layouts/admin/_top_nav.haml
+++ b/app/views/layouts/admin/_top_nav.haml
@@ -15,6 +15,6 @@
         %li{class: ("active" if active_top_nav_section == 'training_sets')}= link_to "Gift Training Sets", admin_training_sets_path
         %li{class: ("active" if active_top_nav_section == 'trait_training_sets')}= link_to "Profile Trait Training Sets", admin_trait_training_sets_path
         %li.divider-vertical
-        %li= link_to "Log Out", private_access_session_path, method: :delete
+        %li= link_to "Log Out", '#', method: :delete
         
 
