basic sign in / out

--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -5,8 +5,11 @@
       %ul.nav.navbar-nav
         %li{class: ("active" if active_top_nav_section == 'home_pages')}= link_to "Wrapt", root_path
       %ul.nav.navbar-nav.pull-right
-        -# TODO only show link to admin if current user is one
-        %li= link_to "Admin", admin_root_path
-        %li= link_to "Log Out", '#', method: :delete
+        - if current_user&.admin?
+          %li= link_to "Admin", admin_root_path
+        - if current_user
+          %li= link_to "Sign Out", destroy_user_session_path, method: :delete
+        - else
+          %li= link_to 'Sign In', new_user_session_path
         
 
