--- a/app/views/layouts/admin/_top_nav.haml
+++ b/app/views/layouts/admin/_top_nav.haml
@@ -16,6 +16,7 @@
         %li{class: ("active" if active_top_nav_section == 'training_sets')}= link_to "Gift Training Sets", admin_training_sets_path
         %li{class: ("active" if active_top_nav_section == 'trait_training_sets')}= link_to "Profile Trait Training Sets", admin_trait_training_sets_path
         %li.divider-vertical
+        %li{class: ("active" if active_top_nav_section == 'users')}= link_to "Users", admin_users_path
       %ul.nav.navbar-nav.pull-right
         - if current_user&.admin?
           %li= link_to "Admin", admin_root_path
