wip scss architecture setup / implement style guide [#135783723]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,13 +14,14 @@
  *= require bootstrap-slider
  */
 
+// @import "modules/fonts"; // TODO uncomment when have fonts
 @import "bootstrap-sprockets";
 @import 'bootstrap-custom';
 // @import "helpers/variables"; included in bootstrap_custom
 @import "helpers/mixins";
+@import "helpers/helper_classes";
 @import "helpers/margins_padding";
+@import "modules/modules";
 
 
-.main.container {
-  min-height: 70vh;
-}
+
