--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,1 +1,8 @@
-Welcome to the Public Site.  We'll add more content soon :)
+.container
+  .row
+    .col-xs-10.col-xs-offset-1
+      %h2 Welcome to the Public Site.  
+      %p.lead We'll add more content soon :)
+
+      %p
+        =link_to 'Style Guide', main_style_guide_path
