--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -7,7 +7,7 @@
  */
 
 @import "bootstrap-sprockets";
-@import 'bootstrap-custom';
+@import 'admin_bootstrap-custom';
 // @import "helpers/variables"; included in bootstrap_custom
 @import "helpers/mixins";
 @import "helpers/margins_padding";
