--- a/app/assets/stylesheets/helpers/_admin_variables.scss
+++ b/app/assets/stylesheets/helpers/_admin_variables.scss
@@ -5,29 +5,43 @@ $bootstrap-sass-asset-helper: false !default;
 
 
 //== Colors
-$gray-001: rgb(244, 246, 246); // #f4f6f6 lightest
-$gray-002: rgb(233, 236, 236); // #e9ecec
-$gray-003: rgb(149, 152, 159); // #95989f
-$gray-005: rgb(128, 129, 132); // #808184 help text
-$gray-007: rgb(109, 110, 112); // #6d6e70
-$gray-008: rgb(77, 76, 77); // #4d4c4d
-$gray-010: rgb(27, 28, 28); // #1b1c1c
-$black: #000;
+$gray-001: rgb(220, 220, 220); // #DCDCDC lightest
+$gray-002: rgb(185, 185, 185); // #B9B9B9
+$gray-003: rgb(150, 150, 150); // #969696
+$gray-004: rgb(115, 115, 115); // #737373
+$gray-005: rgb(80, 80, 80); // #505050
+$gray-006: rgb(60, 60, 60); // #3c3c3c
+$gray-007: rgb(40, 40, 40); // #282828
+$gray-008: rgb(20, 20, 20); // #141414
 
-$blue-001: rgb(145, 167, 206); // #91A7CE lightest, logo border
-$blue-002: rgb(113, 145, 193); // #7191c1
-$blue-003: rgb(22, 80, 151); // #165097
-$blue-004: rgb(144, 165, 205); // #90a5cd
+$red-001: rgb(242, 210, 213); // #F2D2D5 lightest
+$red-002: rgb(229, 165, 171); // #E5A5AB
+$red-003: rgb(216, 120, 129); // #D87881
+$red-004: rgb(203, 75, 87); // #CB4B57
+$red-005: rgb(190, 30, 45); // #BE1E2D
+$red-006: rgb(143, 22, 34); // #8F1622
+$red-007: rgb(95, 15, 23); // #5F0F17
+$red-008: rgb(48, 8, 11); // #30080B
 
-$tan-001: rgb(241, 223, 209); // #f1dfd1
-$tan-002: rgb(197, 170, 128); // #c5aa80
+$blue-001: rgb(208, 219, 225); // #D0DBE1 lightest
+$blue-002: rgb(161, 183, 194); // #A1B7C2
+$blue-003: rgb(115, 148, 164); // #7394A4
+$blue-004: rgb(68, 112, 133); // #447085
+$blue-005: rgb(21, 76, 103); // #154C67
+$blue-006: rgb(16, 57, 77); // #10394D
+$blue-007: rgb(11, 38, 52); // #0B2634
+$blue-008: rgb(5, 18, 26); // #05131A
 
-$orange-001: rgb(247, 154, 111); // #f79a6f
+$green-001: rgb(225, 235, 223); // #E1EBDF
+$green-002: rgb(210, 237, 205); // #D2EDCD
+$green-004: rgb(106, 157, 97); // #6A9D61
+$green-005: rgb(80, 118, 73); // #507649
+$green-006: rgb(53, 79, 49); // #354F31
 
-$green-001: rgb(191, 231, 158); // #bfe79e
-$green-002: rgb(41, 180, 115); // #29b473
-
-$red-001: rgb(235, 103, 103); // #eb6767
+$orange-001: rgb(242, 221, 214); // #F2DDD6
+$orange-002: rgb(255, 199, 180); // #FFC7B4
+$orange-004: rgb(204, 121, 92); // #CC795C
+$orange-005: rgb(191, 87, 51); // #BF5733
 
 // Z-index scale
 $zIndex-1:   100;
@@ -50,18 +64,18 @@ $zIndex-10: 1000;
 //
 //## Gray and brand colors for use across Bootstrap.
 
-$gray-base:              $gray-003 !default;
-$gray-darker:            $gray-005 !default;;
-$gray-dark:              $gray-008 !default;
-$gray:                   $gray-003 !default;
-$gray-light:             $gray-002 !default;
+$gray-base:              $gray-008 !default;
+$gray-darker:            $gray-007 !default;;
+$gray-dark:              $gray-006 !default;
+$gray:                   $gray-005 !default;
+$gray-light:             $gray-003 !default;
 $gray-lighter:           $gray-001 !default;
 
-$brand-primary:         $blue-001 !default;
-$brand-success:         $green-002 !default;
-$brand-info:            $blue-001 !default;
-$brand-warning:         $orange-001 !default;
-$brand-danger:          $red-001 !default;
+$brand-primary:         $blue-005 !default;
+$brand-success:         #6A9D61 !default;
+$brand-info:            $blue-004 !default;
+$brand-warning:         #BF5733 !default;
+$brand-danger:          $red-004 !default;
 
 
 //== Scaffolding
@@ -74,43 +88,42 @@ $body-bg:               #fff !default;
 $text-color:            $gray-dark !default;
 
 //** Global textual link color.
-$link-color:            $blue-001 !default;
+$link-color:            saturate($blue-004, 34) !default;
 //** Link hover color set via `darken()` function.
-$link-hover-color:      $blue-003 !default;
+$link-hover-color:      darken($link-color, 15%) !default;
 //** Link hover decoration.
-$link-hover-decoration: none !default;
+$link-hover-decoration: underline !default;
 
 
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
-$font-family-sans-serif:  'Akkurat', sans-serif !default;
-$font-family-serif:       'Akkurat', serif !default;
+$font-family-sans-serif:  'Open Sans', sans-serif !default;
+$font-family-serif:       'Raleway', sans-serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
-$font-family-monospace:   'AkkuratMono', Consolas, "Courier New", monospace !default;
+$font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base:        $font-family-sans-serif !default;
 
-$em-base:                 10px !default; // font-size of html, set in bs scaffolding
-$font-size-base:          16px !default;
+$font-size-base:          14px !default;
 $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
 
-$font-size-h1:            44px !default; // 
-$font-size-h2:            33px !default; // 
-$font-size-h3:            28px !default; // 
-$font-size-h4:            18px !default; // 
-$font-size-h5:            14px !default;
-$font-size-h6:            ceil(($font-size-base * 0.75)) !default; // ~12px
+$font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
+$font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
+$font-size-h3:            ceil(($font-size-base * 1.7)) !default; // ~24px
+$font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
+$font-size-h5:            $font-size-base !default;
+$font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
 
 //** Unit-less `line-height` for use in components like buttons.
-$line-height-base:        1.75 !default; // 28/16
+$line-height-base:        1.428571429 !default; // 20/14
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 $line-height-computed:    floor(($font-size-base * $line-height-base)) !default; // ~20px
 
 //** By default, this inherits from the `<body>`.
-$headings-font-family:    'AkkuratLight', sans-serif !default;
-$headings-font-weight:    light !default;
-$headings-line-height:    1.227272727 !default;
+$headings-font-family:    'Raleway', sans-serif !default;
+$headings-font-weight:    500 !default;
+$headings-line-height:    1.1 !default;
 $headings-color:          inherit !default;
 
 
@@ -134,29 +147,29 @@ $icon-font-svg-id:        "glyphicons_halflingsregular" !default;
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
 
-$padding-base-vertical:     16px !default;
-$padding-base-horizontal:   28px !default;
+$padding-base-vertical:     6px !default;
+$padding-base-horizontal:   16px !default;
 
-$padding-large-vertical:    18px !default;
-$padding-large-horizontal:  32px !default;
+$padding-large-vertical:    10px !default;
+$padding-large-horizontal:  16px !default;
 
-$padding-small-vertical:    8px !default;
-$padding-small-horizontal:  18px !default;
+$padding-small-vertical:    5px !default;
+$padding-small-horizontal:  10px !default;
 
-$padding-xs-vertical:       6px !default;
-$padding-xs-horizontal:     10px !default;
+$padding-xs-vertical:       1px !default;
+$padding-xs-horizontal:     8px !default;
 
 $line-height-large:         1.3333333 !default; // extra decimals for Win 8.1 Chrome
 $line-height-small:         1.5 !default;
 
-$border-radius-base:        0 !default;
-$border-radius-large:       0 !default;
-$border-radius-small:       0 !default;
+$border-radius-base:        4px !default;
+$border-radius-large:       6px !default;
+$border-radius-small:       3px !default;
 
 //** Global color for active items (e.g., navs or dropdowns).
-$component-active-color:    #000 !default;
+$component-active-color:    #fff !default;
 //** Global background color for active items (e.g., navs or dropdowns).
-$component-active-bg:       #fff !default;
+$component-active-bg:       $brand-primary !default;
 
 //** Width of the `border` for generating carets that indicate dropdowns.
 $caret-width-base:          4px !default;
@@ -191,13 +204,13 @@ $table-border-color:            #ddd !default;
 
 $btn-font-weight:                normal !default;
 
-$btn-default-color:              $gray-008 !default;
-$btn-default-bg:                 #fff !default;
-$btn-default-border:             $blue-001 !default;
+$btn-default-color:              #fff !default;
+$btn-default-bg:                 $gray-003 !default;
+$btn-default-border:             $gray-003 !default;
 
-$btn-primary-color:              $black !default;
-$btn-primary-bg:                 $blue-001 !default;
-$btn-primary-border:             $blue-001 !default;
+$btn-primary-color:              #fff !default;
+$btn-primary-bg:                 $brand-primary !default;
+$btn-primary-border:             darken($btn-primary-bg, 5%) !default;
 
 $btn-success-color:              #fff !default;
 $btn-success-bg:                 $brand-success !default;
@@ -233,9 +246,9 @@ $input-bg:                       #fff !default;
 $input-bg-disabled:              $gray-lighter !default;
 
 //** Text color for `<input>`s
-$input-color:                    $black !default;
+$input-color:                    $gray !default;
 //** `<input>` border color
-$input-border:                   $gray-005 !default;
+$input-border:                   #ccc !default;
 
 // TODO: Rename `$input-border-radius` to `$input-border-radius-base` in v4
 //** Default `.form-control` border radius
@@ -247,26 +260,26 @@ $input-border-radius-large:      $border-radius-large !default;
 $input-border-radius-small:      $border-radius-small !default;
 
 //** Border color for inputs on focus
-$input-border-focus:             $black !default;
+$input-border-focus:             #66afe9 !default;
 
 //** Placeholder text color
-$input-color-placeholder:        $blue-001 !default;
+$input-color-placeholder:        #999 !default;
 
 //** Default `.form-control` height
-$input-height-base:              50px !default;
+$input-height-base:              ($line-height-computed + ($padding-base-vertical * 2) + 2) !default;
 //** Large `.form-control` height
-$input-height-large:             60px !default;
+$input-height-large:             (ceil($font-size-large * $line-height-large) + ($padding-large-vertical * 2) + 2) !default;
 //** Small `.form-control` height
 $input-height-small:             (floor($font-size-small * $line-height-small) + ($padding-small-vertical * 2) + 2) !default;
 
 //** `.form-group` margin
-$form-group-margin-bottom:       40px !default;
+$form-group-margin-bottom:       15px !default;
 
 $legend-color:                   $gray-dark !default;
-$legend-border-color:            $blue-001 !default;
+$legend-border-color:            #e5e5e5 !default;
 
 //** Background color for textual input addons
-$input-group-addon-bg:           $gray-003 !default;
+$input-group-addon-bg:           $gray-lighter !default;
 //** Border color for textual input addons
 $input-group-addon-border-color: $input-border !default;
 
@@ -404,29 +417,29 @@ $container-lg:                 $container-large-desktop !default;
 //##
 
 // Basics of a navbar
-$navbar-height:                    104px !default;
-$navbar-margin-bottom:             60px !default;
+$navbar-height:                    70px !default;
+$navbar-margin-bottom:             $line-height-computed !default;
 $navbar-border-radius:             $border-radius-base !default;
 $navbar-padding-horizontal:        floor(($grid-gutter-width / 2)) !default;
-$navbar-padding-vertical:          38px !default;
+$navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2) !default;
 $navbar-collapse-max-height:       340px !default;
 
-$navbar-default-color:             $gray-008 !default;
-$navbar-default-bg:                #fff !default;
-$navbar-default-border:            $blue-001 !default;
+$navbar-default-color:             #777 !default;
+$navbar-default-bg:                #f8f8f8 !default;
+$navbar-default-border:            darken($navbar-default-bg, 6.5%) !default;
 
 // Navbar links
-$navbar-default-link-color:                $gray-008 !default;
-$navbar-default-link-hover-color:          $blue-001 !default;
+$navbar-default-link-color:                #777 !default;
+$navbar-default-link-hover-color:          #333 !default;
 $navbar-default-link-hover-bg:             transparent !default;
-$navbar-default-link-active-color:         $gray-008 !default;
-$navbar-default-link-active-bg:            transparent !default;
-$navbar-default-link-disabled-color:       $gray-002 !default;
+$navbar-default-link-active-color:         #555 !default;
+$navbar-default-link-active-bg:            darken($navbar-default-bg, 6.5%) !default;
+$navbar-default-link-disabled-color:       #ccc !default;
 $navbar-default-link-disabled-bg:          transparent !default;
 
 // Navbar brand label
-$navbar-default-brand-color:               $blue-001 !default;
-$navbar-default-brand-hover-color:         $blue-002 !default;
+$navbar-default-brand-color:               $navbar-default-link-color !default;
+$navbar-default-brand-hover-color:         darken($navbar-default-brand-color, 10%) !default;
 $navbar-default-brand-hover-bg:            transparent !default;
 
 // Navbar toggle
@@ -438,12 +451,12 @@ $navbar-default-toggle-border-color:       #ddd !default;
 //=== Inverted navbar
 // Reset inverted navbar basics
 $navbar-inverse-color:                      #fff !default;
-$navbar-inverse-bg:                         $blue-003 !default;
+$navbar-inverse-bg:                         $red-007 !default;
 $navbar-inverse-border:                     darken($navbar-inverse-bg, 10%) !default;
 
 // Inverted navbar links
 $navbar-inverse-link-color:                 #fff !default;
-$navbar-inverse-link-hover-color:           $blue-002 !default;
+$navbar-inverse-link-hover-color:           $red-001 !default;
 $navbar-inverse-link-hover-bg:              transparent !default;
 $navbar-inverse-link-active-color:          #fff !default;
 $navbar-inverse-link-active-bg:             darken($navbar-inverse-bg, 10%) !default;
@@ -467,7 +480,7 @@ $navbar-inverse-toggle-border-color:        #333 !default;
 
 //=== Shared nav styles
 $nav-link-padding:                          10px 15px !default;
-$nav-link-hover-bg:                         transparent !default;
+$nav-link-hover-bg:                         $gray-lighter !default;
 
 $nav-disabled-link-color:                   $gray-light !default;
 $nav-disabled-link-hover-color:             $gray-light !default;
@@ -543,19 +556,19 @@ $jumbotron-heading-font-size:    ceil(($font-size-base * 4.5)) !default;
 //
 //## Define colors for form feedback states and, by default, alerts.
 
-$state-success-text:             $green-001 !default;
+$state-success-text:             $green-005 !default;
 $state-success-bg:               $green-002 !default;
 $state-success-border:           darken(adjust-hue($state-success-bg, -10), 5%) !default;
 
-$state-info-text:                $blue-003 !default;
+$state-info-text:                $blue-005 !default;
 $state-info-bg:                  $blue-001 !default;
 $state-info-border:              darken(adjust-hue($state-info-bg, -10), 7%) !default;
 
-$state-warning-text:             $tan-002 !default;
-$state-warning-bg:               $tan-001 !default;
+$state-warning-text:             $orange-005 !default;
+$state-warning-bg:               $orange-002 !default;
 $state-warning-border:           darken(adjust-hue($state-warning-bg, -10), 5%) !default;
 
-$state-danger-text:              #fff !default;
+$state-danger-text:              $red-006 !default;
 $state-danger-bg:                $red-001 !default;
 $state-danger-border:            darken(adjust-hue($state-danger-bg, -10), 5%) !default;
 
@@ -612,7 +625,7 @@ $popover-arrow-outer-fallback-color:  darken($popover-fallback-border-color, 20%
 //##
 
 //** Default label background color
-$label-default-bg:            $gray-008 !default;
+$label-default-bg:            $green-001 !default;
 //** Primary label background color
 $label-primary-bg:            $brand-primary !default;
 //** Success label background color
