--- a/app/assets/stylesheets/helpers/_mixins.scss
+++ b/app/assets/stylesheets/helpers/_mixins.scss
@@ -4,10 +4,10 @@
 
 @mixin shadowed-box__01 {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  transition: all 0.3s ease;
 }
 @mixin shadowed-box__01-hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 7px 7px rgba(0,0,0,0.2);
 }
 @mixin shadowed-box__02 {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -20,4 +20,56 @@
 }
 @mixin shadowed-box__05 {
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
+@mixin akkurat-regular {
+  font-family: "Akkurat", sans-serif;
+}
+@mixin akkurat-light {
+  font-family: "AkkuratRegularLight", sans-serif;
+}
+@mixin akkurat-mono {
+  font-family: "AkkuratMono", monospace;
+}
+@mixin akkurat-bold {
+  font-family: "AkkuratBold", sans-serif;
+}
+
+@mixin vertical-align($position: relative) {
+  position: $position;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+@mixin no-transitions {
+  transition: none;
+  transition-property: none;
+}
+
+@mixin wrapt-border($top: 0, $right: 0, $bottom: 0, $left: 0, $border-color: $blue-001) {
+  border-top: $top;
+  border-right: $right;
+  border-bottom: $bottom;
+  border-left: $left;
+  border-style: solid;
+  border-color: $border-color;
+}
+// bourbon.io
+// Convert pixels to rems
+// eg. for a relational value of 12px write rem(12)
+// Assumes $em-base is the font-size of <html>
+@function strip-units($value) {
+  @return ($value / ($value * 0 + 1));
+}
+@function rem($pxval) {
+  @if not unitless($pxval) {
+    $pxval: strip-units($pxval);
+  }
+
+  $base: $em-base;
+  @if not unitless($base) {
+    $base: strip-units($base);
+  }
+  @return ($pxval / $base) * 1rem;
 }
