--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,27 +2,27 @@
 %html
   %head
     %title Wrapt
+    %meta{name: "viewport", content: "width=device-width"}
+    %meta{content: "IE=edge", "http-equiv": "X-UA-Compatible"}
     = csrf_meta_tags
     = action_cable_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    %link{href: '//fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:400,600|Raleway:400,600', rel: 'stylesheet', type: 'text/css'}
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    -# responsive is disabled so use .col-xs-* everywhere for bs columns
     - if show_top_nav?
       = render 'layouts/top_nav'
     
 
 
          
-    .container.main
-      = render 'layouts/alerts'
-      = render 'breadcrumbs'
-      = yield
+    -#.container.container--main
+    = render 'layouts/alerts'
+    = render 'breadcrumbs'
+    = yield
 
     %footer
-      .container-fluid
-        .row(style="text-align: center;")
-          = link_to image_tag('logo-full-size.png', height: 150), root_path
+      = render 'layouts/footer'
 
     = render 'pjax_modal_frame'
     = yield :page_js
