wip style guide. buttons. [#135783723]

--- a/app/assets/stylesheets/helpers/_variables.scss
+++ b/app/assets/stylesheets/helpers/_variables.scss
@@ -14,10 +14,10 @@ $gray-008: rgb(77, 76, 77); // #4d4c4d
 $gray-010: rgb(27, 28, 28); // #1b1c1c
 $black: #000;
 
-$blue-001: rgb(145, 167, 206); // #91A7CE lightest, logo border
+$blue-001: rgb(145, 167, 206); // #91A7CE lightest, logo border (used for 90a5cd)
 $blue-002: rgb(113, 145, 193); // #7191c1
 $blue-003: rgb(22, 80, 151); // #165097
-$blue-004: rgb(144, 165, 205); // #90a5cd
+$blue-004: rgb(163, 190, 229); // #a3bee5
 
 $tan-001: rgb(241, 223, 209); // #f1dfd1
 $tan-002: rgb(197, 170, 128); // #c5aa80
@@ -134,7 +134,7 @@ $icon-font-svg-id:        "glyphicons_halflingsregular" !default;
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
 
-$padding-base-vertical:     16px !default;
+$padding-base-vertical:     14px !default;
 $padding-base-horizontal:   28px !default;
 
 $padding-large-vertical:    18px !default;
