--- a/app/views/style_guides/main.haml
+++ b/app/views/style_guides/main.haml
@@ -153,7 +153,7 @@
       .div.bg-blue-004.placeholder-block
       $blue-004
       %br
-      #90a5cd
+      #a3bee5
   .row.mb3
     .col-xs-10.col-xs-offset-1
       %h5 Secondary Colors
@@ -275,9 +275,53 @@
 
 
 .container
-  .row#buttons.mb3
+  .row#buttons
     .col-xs-10.col-xs-offset-1
       %h2 Buttons
+  .row.mb1
+    .col-xs-10.col-xs-offset-1
+      %h5 Button Types
+      .ma1.pull-left
+        .btn.btn-primary Primary
+        %br
+        %code .btn-primary
+      .ma1.pull-left
+        .btn.btn-default Default
+        %br
+        %code .btn-default
+      .ma1.pull-left
+        .btn.btn-dark Dark
+        %br
+        %code .btn-dark
+      .ma1.pull-left
+        %input{type:"submit", class: "btn disabled", value: "Disabled"}
+        %br
+        %code .btn.disabled
+  .row.mb1
+    .col-xs-10.col-xs-offset-1
+      %h5 Button Sizes
+      .ma1.pull-left
+        .btn.btn-lg.btn-default Large
+        %br
+        %code .btn.btn-lg
+      .ma1.pull-left
+        .btn.btn-default Default
+        %br
+        %code .btn
+      .ma1.pull-left
+        .btn.btn-sm Small
+        %br
+        %code .btn.btn-sm
+      .ma1.pull-left
+        .btn.btn-xs Extra Small
+        %br
+        %code .btn.btn-xs
+  .row.mb3
+    .col-xs-7.col-xs-offset-1
+      .ma1
+        .btn.btn-full-width.btn-primary Modal Button
+        %br
+        %code .btn.btn-full-width
 
   .row#forms.mb3
     .col-xs-10.col-xs-offset-1
