--- a/app/views/password_resets/show.haml
+++ b/app/views/password_resets/show.haml
@@ -8,6 +8,6 @@
         = form.input :password
 
       .form-actions
-        = form.submit 'Reset Password'
+        = form.submit 'Reset Password', class: 'btn btn-primary'
       
       %p= link_to 'Return to Sign In'
