--- a/app/views/password_resets/show.haml
+++ b/app/views/password_resets/show.haml
@@ -1,13 +1,14 @@
-.row
-  .col-sm-4
-    %h1 Reset Your Password
-    %p Enter your new password below
+.container
+  .row
+    .col-sm-4
+      %h1 Reset Your Password
+      %p Enter your new password below
 
-    = simple_form_for @password_reset do |form|
-      .form-inputs
-        = form.input :password
+      = simple_form_for @password_reset do |form|
+        .form-inputs
+          = form.input :password
 
-      .form-actions
-        = form.submit 'Reset Password', class: 'btn btn-primary'
-      
-      %p= link_to 'Return to Sign In'
+        .form-actions
+          = form.submit 'Reset Password', class: 'btn btn-primary'
+        
+        %p= link_to 'Return to Sign In'
