--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -8,10 +8,18 @@ h5 {
 }
 h1 {
   margin-bottom: 60px;
+  line-height: 1.227272727;
 }
 h1.page-title {
   font-size: rem(36);
+  line-height: 1.294444444;
   margin-bottom: 52px;
+}
+h2 {
+  line-height: 1.333333333;
+}
+h3 {
+  line-height: 1.071428571;
 }
 .byline {
   @include akkurat-mono;
@@ -21,7 +29,6 @@ h1.page-title {
 h4 {
   @include akkurat-bold;
   font-weight: bold;
-  font-size: rem(20);
   margin-bottom: 34px;
 }
 h4.mono {
