--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -21,7 +21,7 @@
     = render 'breadcrumbs'
     = yield
 
-    %footer
+    %footer.footer
       = render 'layouts/footer'
 
     = render 'pjax_modal_frame'
