--- a/app/assets/stylesheets/modules/_footer.scss
+++ b/app/assets/stylesheets/modules/_footer.scss
@@ -1,3 +1,18 @@
+// fix the footer to the bottom of the page
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 120px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  height: 120px;
+  width: 100%;
+  margin-top: 45px;
+}
 footer ul {
   list-style: none;
   display: block;
