--- a/app/views/style_guides/main.haml
+++ b/app/views/style_guides/main.haml
@@ -25,6 +25,7 @@
 .container
   .row#typography
     .col-xs-10.col-xs-offset-1
+      
       %h2
         Typography
         %code
@@ -79,6 +80,70 @@
             %li More about people than purchases
             %li More about love than luxury
             %li Creating communities bound by shared experiences and celebration
+      .well.col-xs-8.col-xs-offset-2
+        .row
+          .col-xs-6
+            %p 
+              html font size: 
+              %br
+              10px (for rem purposes)
+            %p
+              h1 
+              %br
+              44px/54px (1.75), mb: 60px 
+              %br
+              light
+            %p 
+              h1.page-title
+              %br
+              36px/46px (1.28), mb: 52px
+              %br
+              light
+            %p 
+              h2
+              %br
+              33px/44px (1.33), mb: 14px
+              %br
+              light
+            %p 
+              h3
+              %br
+              28px/30px (1.07), mb: 14px
+              %br
+              light
+          .col-xs-6
+            %p 
+              h4
+              %br
+              18px/26px (1.44), mb: 34px 
+              %br
+              bold
+          
+            %p 
+              h4.mono
+              %br
+              18px/26px (1.44), mb: 34px 
+              %br
+              mono
+          
+            %p 
+              h5
+              %br
+              14px/17px (1.21), mb: 14px 
+              %br
+              bold
+            %p 
+              p
+              %br
+              16px/28px (1.75), mb: 28px
+            %p 
+              p.lead 
+              %br
+              20px/32px (1.6), mb: 32px
+            %p
+              p.small
+              %br
+              14px/26px (1.86), mb: 26px
 .container
   .row#colors.mb3
     .col-xs-10.col-xs-offset-1
@@ -323,13 +388,70 @@
         %br
         %code .btn.btn-full-width
 
-  .row#forms.mb3
+  .row#forms.mb4
     .col-xs-10.col-xs-offset-1
       %h2 Forms
-      %p.help-block
-        Help text
-        %code
-          .help-block
+      %p Forms are usually presented in 8 columns, with a full-width submit button.
+      .mh3
+        %h1.page-title.text-center
+          Great Job! We’ve got all the information we need to make gift recommendations for Melissa
+    .col-xs-8.col-xs-offset-2
+      %h4 Invite Melissa
+      %form{"accept-charset" => "UTF-8", :action => "http://simple-form-bootstrap.plataformatec.com.br/examples/create_basic", :enctype => "multipart/form-data", :method => "post", :novalidate => "novalidate", :autocomplete => "off"}
+      .form-group.email.required.user_basic_email.error
+        %label.email.required.control-label{:for => "user_basic_email"}
+          %abbr{:title => "required"} *
+          Email
+        %span.help-block.help-block--hint Some hint text about this form field
+        %input#user_basic_email.string.email.required.form-control{:name => "user_basic[email]", :type => "email", :value => "me@work"}
+        %span.help-block.help-block--error This does not appear to be a valid email address
+        
+      .form-group.password.required.user_basic_password
+        %label.password.required.control-label{:for => "user_basic_password"}
+          %abbr{:title => "required"} *
+          Password
+        %span.help-block.help-block--hint Some hint text about this form field
+        .input-wrapper
+          %input#user_basic_password.password.required.form-control{:name => "user_basic[password]", :placeholder => "Password", :type => "password"}
+          .input-wrapper--show-hide
+            %i.glyphicon.glyphicon-eye-open
+            Show
+        
+        
+      
+      .form-group.boolean.optional.user_basic_active
+        %span.help-block.help-block--hint Some hint text about this form field
+        .checkbox
+          %input{:name => "user_basic[active]", :type => "hidden", :value => "0"}/
+          %label.boolean.optional{:for => "user_basic_active"}
+            %input#user_basic_active.boolean.optional{:name => "user_basic[active]", :type => "checkbox", :value => "1"}
+            Active
+        
+      .form-group.check_boxes.optional.user_basic_choices
+        %label.check_boxes.optional.control-label Choices
+        %span.checkbox
+          %label{:for => "user_basic_choices_option_one_is_this_and_thatbe_sure_to_include_why_its_great"}
+            %input#user_basic_choices_option_one_is_this_and_thatbe_sure_to_include_why_its_great.check_boxes.optional{:name => "user_basic[choices][]", :type => "checkbox", :value => "Option one is this and that—be sure to include why it's great"}
+            Option one is this and that—be sure to include why it's great
+        %span.checkbox
+          %label{:for => "user_basic_choices_option_two_can_be_something_else_and_selecting_it_will_deselect_option_one"}
+            %input#user_basic_choices_option_two_can_be_something_else_and_selecting_it_will_deselect_option_one.check_boxes.optional{:name => "user_basic[choices][]", :type => "checkbox", :value => "Option two can be something else and selecting it will deselect option one"}
+            Option two can be something else and selecting it will deselect option one
+        %input{:name => "user_basic[choices][]", :type => "hidden", :value => ""}
+      
+      .form-group.radio_buttons.optional.user_basic_sex
+        %label.radio_buttons.optional.control-label Gender
+        %span.help-block.help-block--hint  Some hint text about this form field
+        %span.radio
+          %label{:for => "user_basic_sex_male"}
+            %input#user_basic_sex_male.radio_buttons.optional{:name => "user_basic[sex]", :type => "radio", :value => "Male"}
+            Male
+        %span.radio
+          %label{:for => "user_basic_sex_female"}
+            %input#user_basic_sex_female.radio_buttons.optional{:name => "user_basic[sex]", :type => "radio", :value => "Female"}
+            Female
+        
+      %input.btn.btn-primary.btn-full-width{:name => "commit", :type => "submit", :value => "Create User"}
 
   .row#modals.mb3
     .col-xs-10.col-xs-offset-1
